kubedefs/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp
  labels:
    app: vproapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vproapp
 
  template:
    metadata:
      labels:
        app: vproapp
    spec:
      initcontainers:
      - name: init-mydb
        image: busybox
        command: ['sh','-c','until nslookup vprodb.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mydb; sleep 2; done;']
      
      - name: init-memcache
        image: busybox
        command: ['sh','-c','until nslookup vprocache01.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for memcache; sleep 2; done;']
      
      - name: init-rmq
        image: busybox
        command: ['sh','-c','until nslookup vpromq01.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for rmq; sleep 2; done;']
      
      containers:
      - name: vproapp
        image: vijayv5/vprofileapp
        ports:
        - name: vproapp-port
          containerPort: 8080
