kubedefs/db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
  labels:
    app: vprodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprodb
      
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: vprodb
        image: vijayv5/vprofiledb
        
        ports:
        - name: vprodb-port
          containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: vpro-db-data
      volumes:
      - name: vpro-db-data
        persistentVolumeClaim:
          claimName: db-pvc-claim
