kubedefs/webapp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproweb
  labels:
    app: vproweb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vproweb
  template:
    metadata:
      labels:
        app: vproweb
    spec:
      containers:
      - name: vproweb
        image: vijayv5/vprofileweb
        ports:
        - containerPort: 80
