kubedefs/app-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vproapp-service
spec:
  selector:
    app: vproapp
  ports:
    - protocol: TCP
      targetPort: vproapp-port
      port: 8080
  type: ClusterIP
