kubedefs/memcache-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vprocache01
spec:
  selector:
    app: vpromc
  ports:
  - protocol: TCP
    targetPort: vpromc-port
    port: 11211
  type: ClusterIP
