kubedefs/rabbitmq-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vpromq01
spec:
  selector:
    app: vprormq
  ports:
  - protocol: TCP
    targetPort: vprormq-port
    port: 5672
  type: ClusterIP
