kubedefs/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpro-ingress
spec:
  ingressClassName: nginx  
  rules:
  - host: vprofile.demo-vijay.shop
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: vproapp-service
            port:
              number: 8080
